overflow fix

--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -16,6 +16,7 @@
             right: 0;
             height: 100%;
             width: 70%;
+            overflow: hidden;
         }
         .slider_btns{
             position: absolute;
